--- a/app.json
+++ b/app.json
@@ -1,15 +1,21 @@
 {
   "expo": {
-    "name": "kori-workout-demo",
+    "name": "Kori",
     "slug": "kori-workout-demo",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/splash.png",
     "scheme": "koriworkoutdemo",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/images/kori-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#0F1B2E"
+    },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.koriworkoutdemo"
     },
     "android": {
       "adaptiveIcon": {
@@ -19,7 +25,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.koriworkoutdemo"
     },
     "web": {
       "output": "single",
@@ -29,12 +36,12 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/kori-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#0F1B2E",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#0F1B2E"
           }
         }
       ]
